# odoo-cli

./: .env.example  .gitignore  .odoo-context.json.example  .odoo-context.json5.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  README_INSTALL_MAC.md  SECURITY.md  install.sh  pyproject.toml  setup.py  uninstall.sh  update.sh
.github/: CODEOWNERS
.specify/: README.md  config.yaml
.specify/archive/000/: IDEA-01_cross-platform-compatibility.md  IDEA-02_read-only-mode.md  IDEA-03_batch-requests-optimization.md  IDEA-04_session-context-management.md  IDEA-05_odoo-api-best-practices.md  IDEA-06_package-distribution.md  IDEA-07_project-context-layer.md  IDEA-08_contributing-guidelines.md  IDEA-09_python-sdk-library.md  IDEA-10_safe-mode-enforcement.md  IDEA-11_enhanced-error-messages.md  PRIORITIES.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
docs/: AUDIT-REPORT.md  ERROR-HANDLING.md  IMPLEMENTATION-SUMMARY.md  README.md
docs/examples/: aggregation_script.py
docs/guides/: LLM-DEVELOPMENT.md
docs/installation/: INSTALL-MAC.md  README.md
odoo_cli/: __init__.py  cache.py  cli.py  client.py  client_xmlrpc_backup.py  config.py  context.py  decorators.py  deprecation.py  error_handler.py  help.py  utils.py
odoo_cli/commands/: __init__.py  agent_info.py  aggregate.py  context.py  create.py  create_bulk.py  delete.py  exec_code.py  execute.py  get_fields.py  get_models.py  name_get.py  name_search.py  profiles.py  read.py  search.py  search_count.py  search_employee.py  search_holidays.py  shell.py  update.py  update_bulk.py
odoo_cli/field_utils/: __init__.py  field_parser.py
odoo_cli/models/: __init__.py  config.py  context.py  profile.py  result.py  session.py
odoo_cli/schemas/: context_schema.json
odoo_cli/utils/: __init__.py  context_parser.py  output.py
scripts/: add_json_option.py  add_json_option_v2.py  apply_json_option_all.sh
tests/: __init__.py  conftest.py
tests/contract/: test_execute_command.py  test_get_models_command.py  test_search_employee_command.py  test_search_holidays_command.py
tests/fixtures/: context-invalid.json  context-valid.json
tests/integration/: test_context_integration.py
tests/unit/: test_cache.py  test_client_core.py  test_commands_aggregate.py  test_commands_context.py  test_commands_create.py  test_commands_create_bulk.py  test_commands_delete.py  test_commands_execute.py  test_commands_search.py  test_commands_update.py  test_commands_update_bulk.py  test_context.py  test_field_parser.py
(+26 files in other folders)
